--- a/appset-parent.yaml
+++ b/appset-parent.yaml
@@ -10,7 +10,7 @@ spec:
           - cluster: cluster1
             url: https://kubernetes.default.svc
           - cluster: cluster2
-            url: https://kubernetes.default.svc
+            url: https://127.0.0.1:52936
   template:
     metadata:
       name: '{{.cluster}}-parent-app'
