--- a/appset-parent.yaml
+++ b/appset-parent.yaml
@@ -14,6 +14,9 @@ spec:
   template:
     metadata:
       name: '{{.cluster}}-parent-app'
+      labels:
+        environment: production
+        app: parent-app
     spec:
       project: default
       source:
@@ -27,4 +30,5 @@ spec:
         automated:
           prune: true
           selfHeal: true
+
 
