--- a/appset.yaml
+++ b/appset.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: argocd
 spec:
   generators:
+    - list:
+        elements:
+          - cluster: cluster1
+            url: https://kubernetes.default.svc
+          - cluster: cluster2
+            url: https://127.0.0.1:52936
     - git:
         repoURL: https://github.com/andres-mccree/andres-proj
         revision: HEAD
@@ -13,15 +19,18 @@ spec:
           - path: apps/child-app2
   template:
     metadata:
-      name: '{{path.basename}}-app'
+      name: '{{.cluster}}-{{path.basename}}-app'
+      labels:
+        environment: production
+        app: parent-app
     spec:
       project: default
       source:
-        repoURL: https://github.com/andres-mccree/andres-proj
+        repoURL: 'https://github.com/andres-mccree/andres-proj'
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: 'https://kubernetes.default.svc'
+        server: '{{.url}}'
         namespace: '{{path.basename}}'
       syncPolicy:
         automated:
