--- a/appset.yaml
+++ b/appset.yaml
@@ -5,32 +5,33 @@ metadata:
   namespace: argocd
 spec:
   generators:
+    - git:
+        repoURL: https://github.com/andres-mccree/andres-proj
+        revision: HEAD
+        directories:
+          - path: apps/parent-app
+          - path: apps/child-app1
+          - path: apps/child-app2
     - list:
         elements:
           - cluster: cluster1
             url: https://kubernetes.default.svc
           - cluster: cluster2
-            url: https://127.0.0.1:52936
-    - git:
-        repoURL: https://github.com/andres-mccree/andres-proj
-        revision: HEAD
-        directories:
-          - path: apps/child-app1
-          - path: apps/child-app2
+            url: https://kubernetes.default.svc
   template:
     metadata:
-      name: '{{.cluster}}-{{path.basename}}-app'
+      name: '{{path.basename}}-app'
       labels:
         environment: production
-        app: parent-app
+        team: devops
     spec:
       project: default
       source:
-        repoURL: 'https://github.com/andres-mccree/andres-proj'
+        repoURL: https://github.com/andres-mccree/andres-proj
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: '{{.url}}'
+        server: 'https://kubernetes.default.svc'
         namespace: '{{path.basename}}'
       syncPolicy:
         automated:
